n8n/tenant-a/n8n-tenant-a-ingress.yaml
# n8n/tenant-a/n8n-tenant-a-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: n8n-tenant-a-ingress
  namespace: n8n-tenants
  annotations:
    kubernetes.io/ingress.class: "traefik" # Específico para el ingress controller de K3s
    # traefik.ingress.kubernetes.io/router.entrypoints: websecure
    # traefik.ingress.kubernetes.io/router.tls.certresolver: myresolver
spec:
  rules:
  - host: "tenant-a.n8n.atenex.pe"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: n8n-tenant-a-svc
            port:
              number: 5678
